# dddmr_navigation-for-Ackerman

./: .gitignore  README.md
docs/superpowers/plans/: 2026-05-14-web-control-console.md  2026-05-21-system-monitor-tab.md
docs/superpowers/specs/: 2026-05-14-web-control-console-design.md  2026-05-21-system-monitor-tab-design.md
log/: latest_list
src/dddmr_global_planner/: CMakeLists.txt
src/dddmr_global_planner/config/: path_planning_on_2d_static_layer.yaml  path_planning_on_lidar_static_layer.yaml  path_planning_on_no_entry_layer.yaml  path_planning_on_static_layer.yaml
src/dddmr_global_planner/data/: ground_my.pcd  noground_my.pcd
src/dddmr_global_planner/launch/: path_planning_on_static_layer.launch  path_planning_on_static_layer.launch.py
src/dddmr_global_planner/rviz/: path_planning_on_static_layer.rviz
src/dddmr_global_planner/src/: a_star_on_pc.cpp  a_star_on_pre_graph.cpp  dynamic_window_aware_global_planner.cpp  forward_hybrid_a_star.cpp  global_planner.cpp  global_planner_node.cpp
src/dddmr_lego_loam/lego_loam_bor/: CMakeLists.txt
src/dddmr_mcl_3dl/: package.xml
src/dddmr_perception_3d/: CMakeLists.txt
src/dddmr_semantic_segmentation/: package.xml
src/dddmr_web_control/: package.xml  setup.cfg  setup.py
src/dddmr_web_control/config/: web_control.yaml
src/dddmr_web_control/dddmr_web_control/: __init__.py  core.py  web_control_node.py
src/dddmr_web_control/launch/: web_control.launch.py
src/dddmr_web_control/static/: app.js  index.html  styles.css
src/dddmr_web_control/test/: test_core.py
(+75 files in other folders)
